# keva-stratum

./: .gitignore  CMakeLists.txt  README.md  config.example.json  config_keva.json  config_monero.json  go.mod  main.go
cnutil/: CMakeLists.txt  cnutil.go
cnutil/src/: cnutil.cpp  cnutil.h  main.cc
cnutil/src/contrib/epee/src/: wipeable_string.cpp
cnutil/src/crypto/: rx-slow-hash.c  tree-hash.c
cnutil/src/cryptonote_basic/: cryptonote_basic_impl.cpp
cnutil/src/randomx/: configuration.h
hashing/: CMakeLists.txt  hashing.go
hashing/src/: hashing.c  hashing.h
pool/: pool.go
rpc/: rpc.go
stratum/: api.go  blocks.go  handlers.go  miner.go  proto.go  stratum.go
util/: util.go
www/: index.html
